# galaxy-sim

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: camera.rs  initialize.rs  lib.rs  main.rs  render.rs  state.rs
src/shaders/: compute.wgsl  draw.wgsl
