[package]
name = "galaxy-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }
pollster = "0.3"
wgpu = "22.0.0"
winit = "0.29"
cgmath = "0.18"
