[package]
name = "galaxy-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.16", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
pollster = "0.4"
clap = { version = "4.5", features = ["derive"] }
wgpu = "22.0.0"
winit = "0.29"
cgmath = "0.18"
rand_distr = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
clap_complete = "4.5.61"
